--- a/메모리 데이터베이스_개선.html
+++ b/메모리 데이터베이스_개선.html
@@ -77,6 +77,8 @@ function getList(){
 	//console에서 목록의 내용을 출력해보자!!
 	var student=studentArray[0];
 	console.log(student.name,student.loc,student.money);
+	
+	var sum=0; //아래의 반복문을 수행할때마다 그 합계를 구한다!!
 
 	//테이블로 출력하자!!
 	var str="";
@@ -89,13 +91,18 @@ function getList(){
 	str+="</tr>";
 	for(var i=studentArray.length-1;i>=0;i--){
 		var student=studentArray[i];//배열에서 끄집어 내기
-		str+="<tr onClick=\"getDetail("+i+",'"+student.name+"' , '"+student.loc+"' , "+student.money+")\">";
+		sum=sum+student.money;
+
+		str+="<tr onClick=\"getDetail("+i+", '"+student.name+"' , '"+student.loc+"' , "+student.money+")\">";
 		str+="<td>"+i+"</td>";
 		str+="<td>"+student.name+"</td>";
 		str+="<td>"+student.loc+"</td>";
 		str+="<td>"+student.money+"</td>";
 		str+="</tr>";
 	}
+	str+="<tr>";
+	str+="<td colspan='4' align='right'>총"+studentArray.length+"명, 총 "+sum+" 원</td>";
+	str+="</tr>";
 	str+="</table>";
 	list_area.innerHTML=str;
 }
