--- a/이퀄라이저.html
+++ b/이퀄라이저.html
@@ -37,8 +37,12 @@ function createRect(){
 //오직, 현재 문서에 등장한 사각형의 목표지점인 targetH 값을 
 //랜덤하게 지정한다!!!
 function setTarget(){
-	rect.targetH=getRandomByRange(20,501);
-	setTimeout("setTarget()",300);
+	//for(var i=0;i<rectArray.length;i++){
+	//전체를 움직이지 말고, 선택된 애만 움직이게..
+	var n=getRandom(rectArray.length);
+	rectArray[n].targetH=getRandomByRange(20,501);
+	//}
+	setTimeout("setTarget()",10);
 }
 function gameLoop(){
 	for(var i=0;i<rectArray.length;i++){
